--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,17 @@
-* {
-  background-color: #161712;
-}
+/* * {
+  background-color:black;
+} */
 body {
   padding-top: 30px;
   background-color: #161712;
   font-family: "Arial", Gadget, sans-serif;
+  /* background-image:
+  radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 10px),
+  radial-gradient(white, rgba(255,255,255,.15) 1px, transparent 5px),
+  radial-gradient(white, rgba(255,255,255,.1) 2px, transparent 10px),
+  radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 5px);
+  background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
+  background-position: 0 0, 40px 60px, 130px 270px, 70px 100px; */
 }
 h1 {
   color: #FFF;
@@ -18,16 +25,43 @@ a {
   color: #fff;
   text-decoration: none;
 }
+a.returnLink {
+  text-decoration: underline;
+}
+img {
+  width: 100%;
+  height: auto;
+}
+@-webkit-keyframes STAR-MOVE {
+	from {
+		background-position: 5% 5%
+	}
+	to {
+		background-position: 1300% 600%
+	}
+}
+#midground {
+	background: url(https://css-tricks.com/examples/StarryNightCSS3/images/midground.png) repeat 20% 20%;
+	position: absolute;
+	top: 0; left: 0; right: 0; bottom: 0;
+	z-index: 0;
+
+	-webkit-animation-name: STAR-MOVE;
+	-webkit-animation-duration: 450s;
+	-webkit-animation-timing-function: linear;
+	-webkit-animation-iteration-count: infinite;
+}
 .dropdown-toggle {
-  background-color: #161712;
+  background-color: #16171200;
   color: #FFF;
+  width: 30%;
 }
 .dropdown-menu {
-  background-color: #161712;
+  background-color: #16171200;
   color: #FFF;
 }
 .dropdown-item {
-  background-color: #161712;
+  background-color: #16171200;
   color: #000;
   font-size: 16pt;
   padding: 6px;
@@ -42,11 +76,8 @@ li {
   padding-left: 20px;
   text-decoration: none;
 }
-nav {
-  background-color: #161712;
-  margin-bottom: 0px;
-  margin-right: 30px;
-  padding: 10px;
+.navbar {
+  background-color: #16171200;
 }
 a.nav-tabs {
   padding-left: 10px;
@@ -60,8 +91,15 @@ a.nav-tabs:visited {
 a.nav-tabs:hover {
   color: red;
 }
-.custom {
-  cursor: url("./images/tinyAstronaut.png");
+.cursor {
+  /* cursor: auto; */
+  cursor: url(./images/tiniest.jpg), auto;
+}
+.homepageContent {
+  background-color: #161712;
+}
+.curious {
+  /* background-color: #161712; */
 }
 .container-fluid {
   background-color: #161712;
@@ -72,18 +110,10 @@ a.nav-tabs:hover {
   justify-content: center;
   text-align: center;
 }
-.interactiveEMU {
-  display: flex;
-  justify-content: center;
-  margin-top: 0%;
-}
 .pageContent {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-}
-p#partDescriptions {
-
 }
 .center-block {
   display: block;
@@ -93,10 +123,15 @@ p#partDescriptions {
 .row {
   background-color: #161712;
   padding-left: 15px;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
 }
 .tooltip {
   position: relative;
   display: inline-block;
+  background-color: green;
+  font-size: 18pt;
 }
 /* .tooltip .tooltiptext {
   visibility: hidden;
@@ -113,10 +148,554 @@ p#partDescriptions {
 .tooltip:hover .tooltiptext {
   visibility: visible;
 } */
-.tooltip.suitPart .tooltipInner {
+/* .tooltip.suitPart .tooltipInner {
   background-color: blue;
   font-size: 18pt;
   color: white;
   position: absolute;
   z-index: 1;
+} */
+.interactiveEMU {
+  background-color: #16171200;
+  margin-left: 33%;
+  transition: all 1.4s ease-in;
+  z-index: 1;
+}
+.legSpin {
+  transform: translate(400px) rotate(550deg) scale(2);
+}
+.headSpin {
+  transform: translate(800px) rotate(280deg) scale(3);
+}
+.chestSpin {
+  transform: translate(400px, 200px) rotate(410deg) scale(2);
+}
+.materialSkew {
+  transform: skew(45deg, 45deg);
+}
+.gloveSpin {
+  transform: translate(610px, 200px) rotate(240deg) scale(3);
+}
+.exitRight {
+  margin-left: 800px;
+  /* transform: rotate(90deg); */
+}
+.exitLeft {
+  transform: translate(700px);
+}
+.backpackInfoEnter {
+  transform: translate(2000px);
+  width: 60%;
+}
+.materialEnterLeft {
+  transform: translate(1400px, 60px);
+  transition-delay: 1.4s;
+}
+.underwearEnterLeft {
+  transform: translate(1400px, 100px) scale(1.5);
+  transition-delay: 1.4s;
+}
+.backpackEnterLeft {
+  transform: translate(1400px, 100px);
+}
+.saferZoom {
+  -webkit-animation: translate 12s infinite ease-in;
+}
+@-webkit-keyframes translate {
+  0% {
+    -webkit-transform:
+    translate(400px, 500px);
+  }
+  20% {
+    -webkit-transform:
+    translate(200px,200px) rotate(-80deg);
+  }
+  40% {
+    -webkit-transform:
+    translate(100px, -100px) rotate(10deg);
+  }
+  60% {
+    -webkit-transform:
+    translate(-200px, 0px) rotate(360deg);
+  }
+  80% {
+    -webkit-transform:
+    translate(150px, -150px) rotate(35deg);
+  }
+  100% {
+    -webkit-transform:
+    translate(0, -800px);
+  }
+}
+.partInfo {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 80%;
+  background-color: #16171200;
+}
+.helmetInfo {
+  transition: all 1.4s ease-in;
+  width: 60%;
+  margin-left: -690px;
+  padding: 20px;
+  position: absolute;
+  background-color: #16171200;
+}
+.upperTorsoInfo {
+  transition: all 1.4s ease-in;
+  width: 60%;
+  margin-left: -650px;
+  padding: 20px;
+  position: absolute;
+  z-index: 1;
+  background-color: #16171200;
+}
+.gloveInfo {
+  transition: all 1.4s ease-in;
+  width: 60%;
+  margin-left: -700px;
+  padding: 20px;
+  position: absolute;
+  z-index: 1;
+}
+.lowerTorsoInfo {
+  transition: all 1.4s ease-in;
+  width: 60%;
+  margin-left: -680px;
+  padding: 20px;
+  position: absolute;
+  background-color: ##16171200;
+}
+.materialLayersInfo {
+  transition: all 1.4s ease-in;
+  width: 60%;
+  margin-left: -650px;
+  padding: 20px;
+  position: absolute;
+  background-color: #16171200;
+}
+.materialPic {
+  transition: all 1.4s ease-in;
+  position: absolute;
+  margin-left: -650px;
+}
+.spaceUnderwearInfo {
+  transition: all 1.4s ease-in;
+  width: 60%;
+  margin-left: -700px;
+  padding: 20px;
+  position: absolute;
+  background-color: #16171200;
+}
+.spaceUnderwearPic {
+  transition: all 1.4s ease-in;
+  position: absolute;
+  margin-left: -650px;
+}
+.backpackInfo {
+  transition: all 1.4s ease-in;
+  width: 60%;
+  margin-left: -740px;
+  padding: 60px;
+  position: absolute;
+  z-index: 1;
+  background-color: #16171200;
+}
+.backpackPic {
+  transition: all 1.4s ease-in;
+  position: absolute;
+  margin-left: -950px;
+}
+.saferInfo {
+  transition: all 1.4s ease-in;
+  width: 60%;
+  margin-left: -660px;
+  padding: 20px;
+  position: absolute;
+  z-index: 2;
+  background-color: #16171200;
+}
+@media only screen and (max-width: 600px) {
+    .interactiveEMU {
+      margin-left: 15%;
+      background-color: #16171200;
+    }
+    p {
+      font-size: 12pt;
+    }
+    h1 {
+      font-size: 24pt;
+    }
+    .backpackPic {
+      display: none;
+    }
+    .spaceUnderwearPic {
+      margin-left: -500px;
+    }
+    .materialPic {
+      margin-left: -500px;
+    }
+    .saferInfo {
+      width: 120%;
+      margin-left: -500px;
+      background-color: #16171200;
+      z-index: 2;
+    }
+    .backpackInfo {
+      width: 100%;
+      margin-left: -500px;
+      background-color: #16171200;
+    }
+    .spaceUnderwearInfo {
+      width: 100%;
+      margin-left: -500px;
+      background-color: #16171200;
+    }
+    .materialLayersInfo {
+      width: 100%;
+      margin-left: -500px;
+      background-color: #16171200;
+    }
+    .lowerTorsoInfo {
+      width: 100%;
+      margin-left: -500px;
+      background-color: #16171200;
+      z-index: 1;
+    }
+    .gloveInfo {
+      width: 100%;
+      margin-left: -500px;
+      background-color: #16171200;
+    }
+    .upperTorsoInfo {
+      width: 100%;
+      margin-left: -500px;
+      background-color: #16171200;
+    }
+    .helmetInfo {
+      width: 100%;
+      margin-left: -500px;
+      background-color: #16171200;
+    }
+    .legSpin {
+      transform: translate(-80px, 200px) rotate(550deg) scale(.75);
+    }
+    .headSpin {
+      transform: translate(-80px, 400px) rotate(360deg) scale(1);
+    }
+    .chestSpin {
+      transform: translate(-80px, 300px) rotate(330deg) scale(1);
+    }
+    .gloveSpin {
+      transform: translate(170px, -180px) rotate(360deg) scale(1);
+    }
+    .exitRight {
+      margin-left: 800px;
+    }
+    .exitLeft {
+      transform: translate(500px);
+    }
+    .materialEnterLeft {
+      transform: translate(550px, 160px) scale(.5);
+    }
+    .underwearEnterLeft {
+      transform: translate(600px, 220px) scale(.8);
+    }
+    .backpackEnterLeft {
+      transform: translate(1400px, 100px);
+    }
+    .saferZoom {
+      -webkit-animation: translate 25s infinite ease scale(.5);
+    }
+    @-webkit-keyframes translate {
+      0% {
+        -webkit-transform:
+        translate(400px, 800px);
+      }
+      10% {
+        -webkit-transform:
+        translate(-80px, 900px) rotate(90deg);
+      }
+      20% {
+        -webkit-transform:
+        translate(-150px);
+      }
+      30% {
+        -webkit-transform:
+        rotate(240deg);
+      }
+      40% {
+        -webkit-transform:
+        rotate(10deg);
+      }
+      50% {
+        -webkit-transform:
+        translate(-200px, -500px);
+      }
+      70% {
+        -webkit-transform:
+        rotate(-430deg);
+      }
+      90% {
+        -webkit-transform:
+        translate(100px, 300px);
+      }
+      100% {
+        -webkit-transform:
+        translate(150px, 600px);
+      }
+    }
+}
+@media only screen and (min-width: 601px) and (max-width: 1088px){
+  .interactiveEMU {
+    margin-left: 25%;
+  }
+  p {
+    font-size: 16pt;
+  }
+  h1 {
+    font-size: 26pt;
+  }
+  .backpackPic {
+    display: none;
+  }
+  .spaceUnderwearPic {
+    margin-left: -600px;
+  }
+  .materialPic {
+    margin-left: -600px;
+  }
+  .saferInfo {
+    width: 70%;
+    margin-left: -600px;
+    background-color: #16171200;
+  }
+  .backpackInfo {
+    width: 70%;
+    margin-left: -600px;
+    background-color: #16171200;
+  }
+  .spaceUnderwearInfo {
+    width: 70%;
+    margin-left: -600px;
+    background-color: #16171200;
+  }
+  .materialLayersInfo {
+    width: 70%;
+    margin-left: -600px;
+    background-color: #16171200;
+  }
+  .lowerTorsoInfo {
+    width: 70%;
+    margin-left: -600px;
+    background-color: #16171200;
+    z-index: 1;
+  }
+  .gloveInfo {
+    width: 70%;
+    margin-left: -600px;
+    background-color: #16171200;
+  }
+  .upperTorsoInfo {
+    width: 70%;
+    margin-left: -600px;
+    background-color: #16171200;
+  }
+  .helmetInfo {
+    width: 70%;
+    margin-left: -600px;
+    background-color: #16171200;
+    z-index: 1;
+  }
+  .headSpin {
+    transform: translate(400px, 100px) rotate(320deg) scale(1.5);
+  }
+  .chestSpin {
+    transform: translate(300px, 200px) rotate(330deg) scale(1.5);
+  }
+  .legSpin {
+    transform: translate(200px, 200px) rotate(190deg) scale(1.5);
+  }
+  .gloveSpin {
+    transform: translate(220px, -140px) rotate(380deg) scale(1);
+  }
+  .exitRight {
+    margin-left: 800px;
+    /* transform: rotate(90deg); */
+  }
+  .exitLeft {
+    transform: translate(600px);
+  }
+  .materialEnterLeft {
+    transform: translate(1000px, 200px) scale(1);
+  }
+  .underwearEnterLeft {
+    transform: translate(1200px, 220px) scale(1);
+  }
+  .backpackEnterLeft {
+    transform: translate(1400px, 100px);
+  }
+  .saferZoom {
+    -webkit-animation: translate 20s infinite ease-in scale(.5);
+  }
+  @-webkit-keyframes translate {
+    0% {
+      -webkit-transform:
+      translate(300px, 600px);
+    }
+    10% {
+      -webkit-transform:
+      translate(0px, 800px) rotate(80deg);
+    }
+    15% {
+      -webkit-transform:
+      translate(600px);
+    }
+    30% {
+      -webkit-transform:
+      rotate(240deg);
+    }
+    40% {
+      -webkit-transform:
+      rotate(10deg);
+    }
+    50% {
+      -webkit-transform:
+      translate(-400px, -700px);
+    }
+    70% {
+      -webkit-transform:
+      rotate(-480deg);
+    }
+    90% {
+      -webkit-transform:
+      translate(300px, -200px);
+    }
+  }
+}
+@media only screen and (min-width: 577px) and (max-width: 955px){
+  .interactiveEMU {
+    margin-left: 20%;
+    background-color: #16171200;
+  }
+  p {
+    font-size: 14pt;
+  }
+  h1 {
+    font-size: 22pt;
+  }
+  .spaceUnderwearPic {
+    margin-left: -600px;
+  }
+  .materialPic {
+    margin-left: -600px;
+  }
+  .saferInfo {
+    width: 70%;
+    margin-left: -600px;
+    background-color: #ffffff00;
+  }
+  .backpackInfo {
+    width: 70%;
+    margin-left: -600px;
+    background-color: #16171200;
+  }
+  .spaceUnderwearInfo {
+    width: 70%;
+    margin-left: -600px;
+    background-color: #16171200;
+  }
+  .materialLayersInfo {
+    width: 70%;
+    margin-left: -600px;
+    background-color: #16171200;
+  }
+  .lowerTorsoInfo {
+    width: 70%;
+    margin-left: -600px;
+    background-color: #16171200;
+    z-index: 1;
+  }
+  .gloveInfo {
+    width: 70%;
+    margin-left: -600px;
+    background-color: #16171200;
+  }
+  .upperTorsoInfo {
+    width: 70%;
+    margin-left: -600px;
+    background-color: #16171200;
+  }
+  .helmetInfo {
+    width: 70%;
+    margin-left: -600px;
+    background-color: #16171200;
+    z-index: 1;
+  }
+  .headSpin {
+    transform: translate(400px, 100px) rotate(320deg) scale(1.5);
+  }
+  .chestSpin {
+    transform: translate(300px, 200px) rotate(330deg) scale(1.5);
+  }
+  .legSpin {
+    transform: translate(200px, 200px) rotate(190deg) scale(1.5);
+  }
+  .gloveSpin {
+    transform: translate(220px, -140px) rotate(380deg) scale(1);
+  }
+  .exitRight {
+    margin-left: 800px;
+    /* transform: rotate(90deg); */
+  }
+  .exitLeft {
+    transform: translate(600px);
+  }
+  .materialEnterLeft {
+    transform: translate(1000px, 200px) scale(1);
+  }
+  .underwearEnterLeft {
+    transform: translate(1000px, 220px) scale(1);
+  }
+  .backpackEnterLeft {
+    transform: translate(1400px, 100px);
+  }
+  .saferZoom {
+    -webkit-animation: translate 20s infinite ease-in scale(.5);
+  }
+  @-webkit-keyframes translate {
+    0% {
+      -webkit-transform:
+      translate(300px, 600px);
+    }
+    10% {
+      -webkit-transform:
+      translate(0px, 800px) rotate(80deg);
+    }
+    15% {
+      -webkit-transform:
+      translate(600px);
+    }
+    30% {
+      -webkit-transform:
+      rotate(240deg);
+    }
+    40% {
+      -webkit-transform:
+      rotate(10deg);
+    }
+    50% {
+      -webkit-transform:
+      translate(-400px, -700px);
+    }
+    70% {
+      -webkit-transform:
+      rotate(-480deg);
+    }
+    90% {
+      -webkit-transform:
+      translate(300px, -200px);
+    }
+  }
 }
