--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,13 +5,6 @@ body {
   padding-top: 30px;
   background-color: #161712;
   font-family: "Arial", Gadget, sans-serif;
-  /* background-image:
-  radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 10px),
-  radial-gradient(white, rgba(255,255,255,.15) 1px, transparent 5px),
-  radial-gradient(white, rgba(255,255,255,.1) 2px, transparent 10px),
-  radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 5px);
-  background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
-  background-position: 0 0, 40px 60px, 130px 270px, 70px 100px; */
 }
 h1 {
   color: #FFF;
@@ -52,9 +45,9 @@ img {
 	-webkit-animation-iteration-count: infinite;
 }
 .dropdown-toggle {
-  background-color: #16171200;
+  background-color: #161712;
   color: #FFF;
-  /* width: 30%; */
+  width: 10%;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
   border-top: 10px solid;
@@ -84,7 +77,7 @@ li {
 }
 .navbar-header {
   display: flex;
-  width: 19%;
+  width: 15%;
   justify-content: space-between;
   align-items: center;
 }
@@ -102,7 +95,7 @@ a.nav-tabs:hover {
 }
 .cursor {
   /* cursor: auto; */
-  cursor: url(assets/images/tiniest.jpg), auto;
+  cursor: url(assets/images/tinierISSS.jpg), auto;
 }
 .homepageContent {
   background-color: #161712;
@@ -336,6 +329,20 @@ a.nav-tabs:hover {
     h1 {
       font-size: 24pt;
     }
+    .navbar-header {
+      display: flex;
+      width: 45%;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .dropdown-toggle {
+      background-color: #161712;
+      color: #FFF;
+      width: 15%;
+      border-left: 10px solid transparent;
+      border-right: 10px solid transparent;
+      border-top: 10px solid;
+    }
     .backpackPic {
       display: none;
     }
@@ -352,7 +359,7 @@ a.nav-tabs:hover {
       z-index: 2;
     }
     .backpackInfo {
-      width: 100%;
+      width: 140%;
       margin-left: -500px;
       background-color: #16171200;
     }
@@ -391,13 +398,13 @@ a.nav-tabs:hover {
       transform: translate(-80px, 200px) rotate(550deg) scale(.75);
     }
     .headSpin {
-      transform: translate(-80px, 400px) rotate(360deg) scale(1);
+      transform: translate(40px, 420px) rotate(360deg) scale(1);
     }
     .chestSpin {
-      transform: translate(-80px, 300px) rotate(330deg) scale(1);
+      transform: translate(80px, 300px) rotate(330deg) scale(1);
     }
     .gloveSpin {
-      transform: translate(170px, -180px) rotate(360deg) scale(1);
+      transform: translate(170px, -100px) rotate(360deg) scale(1);
     }
     .exitRight {
       margin-left: 800px;
@@ -409,7 +416,7 @@ a.nav-tabs:hover {
       transform: translate(550px, 160px) scale(.5);
     }
     .underwearEnterLeft {
-      transform: translate(600px, 220px) scale(.8);
+      transform: translate(600px, 250px) scale(.8);
     }
     .backpackEnterLeft {
       transform: translate(1400px, 100px);
@@ -456,134 +463,7 @@ a.nav-tabs:hover {
       }
     }
 }
-@media only screen and (min-width: 601px) and (max-width: 1088px){
-  .interactiveEMU {
-    margin-left: 25%;
-  }
-  p {
-    font-size: 16pt;
-  }
-  h1 {
-    font-size: 26pt;
-  }
-  .backpackPic {
-    display: none;
-  }
-  .spaceUnderwearPic {
-    margin-left: -600px;
-  }
-  .materialPic {
-    margin-left: -600px;
-  }
-  .saferInfo {
-    width: 70%;
-    margin-left: -600px;
-    background-color: #16171200;
-  }
-  .backpackInfo {
-    width: 70%;
-    margin-left: -600px;
-    background-color: #16171200;
-  }
-  .spaceUnderwearInfo {
-    width: 70%;
-    margin-left: -600px;
-    background-color: #16171200;
-  }
-  .materialLayersInfo {
-    width: 70%;
-    margin-left: -600px;
-    background-color: #16171200;
-  }
-  .lowerTorsoInfo {
-    width: 70%;
-    margin-left: -600px;
-    background-color: #16171200;
-    z-index: 1;
-  }
-  .gloveInfo {
-    width: 70%;
-    margin-left: -600px;
-    background-color: #16171200;
-  }
-  .upperTorsoInfo {
-    width: 70%;
-    margin-left: -600px;
-    background-color: #16171200;
-  }
-  .helmetInfo {
-    width: 70%;
-    margin-left: -600px;
-    background-color: #16171200;
-    z-index: 1;
-  }
-  .headSpin {
-    transform: translate(400px, 100px) rotate(320deg) scale(1.5);
-  }
-  .chestSpin {
-    transform: translate(300px, 200px) rotate(330deg) scale(1.5);
-  }
-  .legSpin {
-    transform: translate(200px, 200px) rotate(190deg) scale(1.5);
-  }
-  .gloveSpin {
-    transform: translate(220px, -140px) rotate(380deg) scale(1);
-  }
-  .exitRight {
-    margin-left: 800px;
-    /* transform: rotate(90deg); */
-  }
-  .exitLeft {
-    transform: translate(600px);
-  }
-  .materialEnterLeft {
-    transform: translate(1000px, 200px) scale(1);
-  }
-  .underwearEnterLeft {
-    transform: translate(1200px, 220px) scale(1);
-  }
-  .backpackEnterLeft {
-    transform: translate(1400px, 100px);
-  }
-  .saferZoom {
-    -webkit-animation: translate 20s infinite ease-in scale(.5);
-  }
-  @-webkit-keyframes translate {
-    0% {
-      -webkit-transform:
-      translate(300px, 600px);
-    }
-    10% {
-      -webkit-transform:
-      translate(0px, 800px) rotate(80deg);
-    }
-    15% {
-      -webkit-transform:
-      translate(600px);
-    }
-    30% {
-      -webkit-transform:
-      rotate(240deg);
-    }
-    40% {
-      -webkit-transform:
-      rotate(10deg);
-    }
-    50% {
-      -webkit-transform:
-      translate(-400px, -700px);
-    }
-    70% {
-      -webkit-transform:
-      rotate(-480deg);
-    }
-    90% {
-      -webkit-transform:
-      translate(300px, -200px);
-    }
-  }
-}
-@media only screen and (min-width: 577px) and (max-width: 955px){
+@media only screen and (min-width: 601px) and (max-width: 955px){
   .interactiveEMU {
     margin-left: 20%;
     background-color: #16171200;
@@ -593,6 +473,20 @@ a.nav-tabs:hover {
   }
   h1 {
     font-size: 22pt;
+  }
+  .navbar-header {
+    display: flex;
+    width: 20%;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .dropdown-toggle {
+    background-color: #161712;
+    color: #FFF;
+    width: 15%;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 10px solid;
   }
   .spaceUnderwearPic {
     margin-left: -600px;
